fixed image overlap on events page and updated Navbar with new headings

--- a/src/components/Events.module.css
+++ b/src/components/Events.module.css
@@ -4,7 +4,7 @@
   align-items: center;
   flex-direction: column;
   padding-top: 80px;
-  padding-bottom: 520px;
+  padding-bottom: 720px;
 }
 
 .footer {
